# dav-cloud

./: .dockerfile  .env_example  Dockerfile  app.db  app.py  config.py  models.py  pyproject.toml  requirements.txt  start.sh  uwsgi.ini
app/: __init__.py  forms.py  lojas_ips.py  models.py  requirements.txt  views.py
app/templates/: dns.html  index.html
migrations/versions/: 4726cef7ad41_tabela_url.py  72d643812281_coluna_ip_de_que_deve.py
src/: app.py  models.py
templates/: index.html
