[tool.poetry]
name = "verifica-parametros-cloud"
version = "0.1.0"
description = ""
authors = ["Antonio Sousa <antonioufpi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
Flask-Env = "^2.0.0"
fdb = "^2.0.1"
black = "^20.8b1"
Flask-Bootstrap = "^3.3.7"
python-dotenv = "^0.17.0"
isort = "^5.8.0"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^2.7.0"
Flask-WTF = "^0.14.3"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
